--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,14 @@
 # Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
-
 # Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.16.2
-	yarn_mappings=1.16.2+build.1
-	loader_version=0.9.1+build.205
-
+# check these on https://fabricmc.net/use
+minecraft_version=1.16.2
+yarn_mappings=1.16.2+build.1
+loader_version=0.9.1+build.205
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = net.fabricmc
-	archives_base_name = fabric-example-mod
-
+mod_version=1.0.0
+maven_group=io.github.samipourquoi
+archives_base_name=syncmatica
 # Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.17.2+build.396-1.16
+# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
+fabric_version=0.17.2+build.396-1.16
