--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,21 @@ archivesBaseName = project.archives_base_name
 version = project.mod_version
 group = project.maven_group
 
+repositories {
+    maven {
+        url = "https://www.cursemaven.com"
+    }
+}
+
 dependencies {
     //to change the versions see the gradle.properties file
     minecraft "com.mojang:minecraft:${project.minecraft_version}"
     mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
     modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
+
+    // Litematica
+    modImplementation "curse.maven:litematica-${project.minecraft_version}:${project.litematica_fileid}"
+    modImplementation "curse.maven:malilib-${project.minecraft_version}:${project.malilib_fileid}"
 
     // Fabric API. This is technically optional, but you probably want it anyway.
     // modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
@@ -76,4 +86,8 @@ publishing {
         // uncomment to publish to the local maven
         // mavenLocal()
     }
+}
+
+minecraft {
+    accessWidener "src/main/resources/syncmatica.accesswidener"
 }
