--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,6 @@
     archives_base_name=syncmatica
 
 # Dependencies
-    litematica_fileid=3030383
-    malilib_fileid=3030379
+    litematica_fileid=3175258
+    malilib_fileid=3252979
+    litematica_minecraft_version=1.16.4
