Upgraded to new gradle and litematica/malilib version

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 # Done to increase the memory available to gradle.
-    org.gradle.jvmargs=-Xmx1G
+org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-# check these on https://fabricmc.net/use
-    minecraft_version=1.16.3
-    yarn_mappings=1.16.3+build.47
-    loader_version=0.10.3+build.211
+	# check these on https://fabricmc.net/use
+	minecraft_version=1.16.5
+	yarn_mappings=1.16.5+build.6
+	loader_version=0.11.3
 
 # Mod Properties
-    mod_version=0.2.0
-    maven_group=io.github.samipourquoi
-    archives_base_name=syncmatica
+	mod_version = 0.2.0
+	maven_group = io.github.samipourquoi
+	archives_base_name = syncmatica
 
 # Dependencies
-    litematica_fileid=3175258
-    malilib_fileid=3252979
-    litematica_minecraft_version=1.16.4
+	litematica_fileid=3175258
+	malilib_fileid=3252979
+	litematica_minecraft_version=1.16.4
