--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,4 @@ org.gradle.jvmargs=-Xmx1G
 	litematica_fileid=3175258
 	malilib_fileid=3252979
 	litematica_minecraft_version=1.16.4
+	fabric_resource_loader_version = 0.4.1+0d4d7e343a
