--- a/gradle.properties
+++ b/gradle.properties
@@ -8,8 +8,8 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.11.3
 
 # Mod Properties
-	mod_version = 0.2.6
-	maven_group = io.github.samipourquoi
+	mod_version = 0.3.0
+	maven_group = ch.endte
 	archives_base_name = syncmatica
 
 # Dependencies
