--- a/gradle.properties
+++ b/gradle.properties
@@ -3,17 +3,16 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.2
-	loader_version=0.13.3
+	minecraft_version=1.19
+	yarn_mappings=1.19+build.4
+	loader_version=0.14.8
 
 # Mod Properties
-	mod_version = 0.3.2
+	mod_version = 0.3.3
 	maven_group = ch.endte
 	archives_base_name = syncmatica
 
 # Dependencies
-	litematica_fileid=3545947
-	malilib_fileid=3544210
-	litematica_minecraft_version=1.18.0
-	fabric_resource_loader_version = 0.4.11+3ac43d9514
+	litematica_version=1.19-0.11.3
+	malilib_version=1.19-0.12.1
+	fabric_resource_loader_version = 0.4.19+7463d67ced
