--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.2
-    loader_version=0.14.10
+	minecraft_version=1.20.2
+	yarn_mappings=1.20.2+build.4
+    loader_version=0.14.23
+	fabric_version=0.90.4+1.20.2
 
 # Mod Properties
 	mod_version = 0.3.11
@@ -13,7 +14,7 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = syncmatica
 
 # Dependencies
-	litematica_fileid=3545947
-	malilib_fileid=3544210
-	litematica_minecraft_version=1.18.0
-	fabric_resource_loader_version = 0.4.11+3ac43d9514
+	litematica_fileid=4789765
+	malilib_fileid=4788432
+	litematica_minecraft_version=1.20.2
+	fabric_resource_loader_version = 0.11.11+86b12645a0
