--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.20.1
-	yarn_mappings=1.20.1+build.9
-	loader_version=0.14.21
+	minecraft_version=1.20.2
+	yarn_mappings=1.20.2+build.4
+    loader_version=0.14.23
+	fabric_version=0.90.4+1.20.2
 
 # Mod Properties
 	mod_version = 0.3.11
@@ -13,7 +14,7 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = syncmatica
 
 # Dependencies
-	litematica_fileid=4593296
-	malilib_fileid=4593073
-	litematica_minecraft_version=1.20.1
-	fabric_resource_loader_version = 0.11.7+f7923f6d82
+	litematica_fileid=4789765
+	malilib_fileid=4788432
+	litematica_minecraft_version=1.20.2
+	fabric_resource_loader_version = 0.11.11+86b12645a0
