--- a/gradle.properties
+++ b/gradle.properties
@@ -2,19 +2,21 @@
 org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
-	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.20.2
-	yarn_mappings=1.20.2+build.4
-    loader_version=0.14.23
-	fabric_version=0.90.4+1.20.2
+# check these on https://fabricmc.net/versions.html
+minecraft_version=1.20.3-rc1
+yarn_mappings=1.20.3-rc1+build.2
+loader_version=0.14.24
+fabric_version=0.91.1+1.20.3
 
 # Mod Properties
-	mod_version = 0.3.11
-	maven_group = ch.endte
-	archives_base_name = syncmatica
+mod_version = 0.3.11
+maven_group = ch.endte
+archives_base_name = syncmatica
 
 # Dependencies
-	litematica_fileid=4789765
-	malilib_fileid=4788432
-	litematica_minecraft_version=1.20.2
-	fabric_resource_loader_version = 0.11.11+86b12645a0
+# - Use my fork (sakura-ryoko) of masa's mods for 1.20.3-rc1 for build testing
+# - Pulls with Masa are pending with these version numbers, and should work on 1.20.3 release with minimal effort.
+minecraft_version_out = 1.20.3-rc1
+malilib_version=0.18.0-beta.2
+litematica_version=0.17.0-beta.2
+fabric_resource_loader_version = 0.11.14+f31bf881e9
