--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,10 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/versions.html
-	minecraft_version=1.20.2
-	yarn_mappings=1.20.2+build.4
-    loader_version=0.14.23
-	fabric_version=0.90.4+1.20.2
+	minecraft_version=1.20.4
+	yarn_mappings=1.20.4+build.3
+    loader_version=0.15.3
+	fabric_version=0.91.3+1.20.4
 
 # Mod Properties
 	mod_version = 0.3.11
@@ -14,7 +14,7 @@ org.gradle.jvmargs=-Xmx1G
 	archives_base_name = syncmatica
 
 # Dependencies
-	litematica_fileid=4789765
-	malilib_fileid=4788432
-	litematica_minecraft_version=1.20.2
-	fabric_resource_loader_version = 0.11.11+86b12645a0
+	litematica_fileid=4946471
+	malilib_fileid=4946328
+	litematica_minecraft_version=1.20.4
+	# fabric_resource_loader_version = 0.11.11+86b12645a0
